--- a/api-book-contacts/composer.json
+++ b/api-book-contacts/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.5.*",
         "auth0/login": "^5.0.2",
-        "barryvdh/laravel-cors": "^0.11.0"
+        "barryvdh/laravel-cors": "0.10.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
